Changes made style to ensure no whitespaces on pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #202945;
 }
 
 main {
@@ -16,10 +17,6 @@ main {
 
 section, footer {
     padding: 30px 0;
-}
-
-.tail {
-    height: 40vh;
 }
 
 /* flash messages */
